[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/GUI/CharacterSheet.gd" type="Script" id=1]
[ext_resource path="res://theme/basic.thm" type="Theme" id=2]

[node name="CharacterPanel" type="Panel"]

margin/right = 170.0
margin/bottom = 150.0
rect/min_size = Vector2( 220, 150 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )

[node name="Sheet" type="VBoxContainer" parent="."]

margin/right = 213.0
margin/bottom = 150.0
rect/min_size = Vector2( 0, 150 )
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="Name" type="RichTextLabel" parent="Sheet"]

margin/right = 213.0
margin/bottom = 23.0
rect/min_size = Vector2( 20, 20 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[b]Name[b]"
visible_characters = -1

[node name="HealthBar" type="ProgressBar" parent="Sheet"]

margin/top = 27.0
margin/right = 213.0
margin/bottom = 45.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
theme/theme = ExtResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 45.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="HealthNumber" type="RichTextLabel" parent="Sheet"]

margin/top = 49.0
margin/right = 213.0
margin/bottom = 72.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[b]100/100[/b]"
visible_characters = -1

[node name="ManaBar" type="ProgressBar" parent="Sheet"]

margin/top = 76.0
margin/right = 213.0
margin/bottom = 94.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
theme/theme = ExtResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="ManaNumber" type="RichTextLabel" parent="Sheet"]

margin/top = 98.0
margin/right = 213.0
margin/bottom = 121.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[color=firebrick][b]100/100[/b][/color]"
visible_characters = -1

[node name="ActionPoints" type="RichTextLabel" parent="Sheet"]

margin/top = 125.0
margin/right = 213.0
margin/bottom = 150.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[color=firebrick][b]100/100[/b][/color]"
visible_characters = -1

[node name="Button" type="Button" parent="."]

visibility/opacity = 0.0
margin/right = 213.0
margin/bottom = 150.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
flat = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


